Melhorado lista para classes Bootstrap

--- a/aula_web_ii.html
+++ b/aula_web_ii.html
@@ -9,11 +9,11 @@
 <body style="height: 100%">
 	<div class="container d-flex" style="height: 100%">
 		<div class="col-6 offset-3 align-self-center">
-			<h1>Dados para contato:</h1>
-			<ul>
-				<li>Nome: Matheus Miliorini</li>
-				<li>E-mail: <a href="mailto:miliorinimatheus@gmail.com">miliorinimatheus@gmail.com</a></li>
-				<li>Telefone: (47) 1234-5678</li>
+			<ul class="list-group">
+				<li class="list-group-item active">Dados para contato:</li>
+				<li class="list-group-item">Nome: Matheus Miliorini</li>
+				<li class="list-group-item">E-mail: <a href="mailto:miliorinimatheus@gmail.com">miliorinimatheus@gmail.com</a></li>
+				<li class="list-group-item">Telefone: (47) 1234-5678</li>
 			</ul>
 		</div>
 	</div>
